--- a/advanced/exercise_2/style.css
+++ b/advanced/exercise_2/style.css
@@ -1,3 +1,10 @@
+
+* {
+	box-sizing: border-box;
+	margin: 0;
+}
+
+
 header{
 	background-color: red;
 	color: white;
@@ -12,13 +19,28 @@ h1{
 nav li{
 	display: inline;
 	list-style-type: none;
+	padding: 30px;
 }
 nav{
-	height: 20pt;
+	height: 30pt;
 	background-color: red;
 	color: white;
-	font-size: 10pt;
+	
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	
+	font-size: 1.2em;
+	border-top: 1px solid white;
+	border-bottom: 1px solid white;
+	
 }
+
+nav a {
+	color: white;
+	text-decoration: none;
+}
+
 #werbung_bild{
 	width: 200px;
 	height:  150px;
